[tool.poetry]
name = "azureipcheck"
version = "0.1.0"
description = "A Python CLI tool to check service tags for Azure IPs"
authors = ["Leron Gray"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.2"}
rich = "^9.3.0"
pydantic = "^1.7.3"
python-dotenv = "^0.15.0"
click-help-colors = "^0.9"
requests = "^2.25.1"
clumper = "^0.2.7"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"
mkdocs = "^1.1.2"
mkdocs-click = "^0.2.0"
mkdocs-material = "^6.1.7"
typer-cli = "^0.0.11"
autoflake = "^1.4"

[tool.poetry.scripts]
azureipcheck = "azureipcheck.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
