[tool.poetry]
name = "azureipcheck"
version = "1.0.1"
description = "A Python CLI tool to check service tags for Azure IPs"
authors = ["Leron Gray"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/daddycocoaman/azureipcheck"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.2"}
rich = ">=9.3,<11.0"
click-help-colors = "^0.9"
clumper = "^0.2.7"
gazpacho = "^1.1"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
black = "^21.10b0"
autoflake = "^1.4"

[tool.poetry.scripts]
azureipcheck = "azureipcheck.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
